package tasks.task_9;

public enum Purposes {
    PREFERENTIAl,
    USUAL,
    GOVERMENT,
    BANK
}
