@startuml

title __TASK_9's Class Diagram__\n

  namespace tasks.task_9 {
    class tasks.task_9.BankPayment {
        + BankPayment()
        ~ pay()
    }
  }
  

  namespace tasks.task_9 {
    class tasks.task_9.GovermentPayment {
        + GovermentPayment()
        ~ pay()
    }
  }
  

  namespace tasks.task_9 {
    class tasks.task_9.Main {
        {static} + main()
    }
  }
  

  namespace tasks.task_9 {
    abstract class tasks.task_9.Payment {
        + Payment()
        + makePayment()
        + setNextPayment()
        {abstract} ~ pay()
    }
  }
  

  namespace tasks.task_9 {
    class tasks.task_9.PreferentialPayment {
        + PreferentialPayment()
        ~ pay()
    }
  }
  

  namespace tasks.task_9 {
    enum Purposes {
      BANK
      GOVERMENT
      PREFERENTIAl
      USUAL
    }
  }
  

  namespace tasks.task_9 {
    class tasks.task_9.UsualPayment {
        + UsualPayment()
        ~ pay()
    }
  }
  

  tasks.task_9.BankPayment -up-|> tasks.task_9.Payment
  tasks.task_9.GovermentPayment -up-|> tasks.task_9.Payment
  tasks.task_9.Payment o-- tasks.task_9.Payment : nextPayment
  tasks.task_9.Payment o-- tasks.task_9.Purposes : purposeOfPayment
  tasks.task_9.PreferentialPayment -up-|> tasks.task_9.Payment
  tasks.task_9.UsualPayment -up-|> tasks.task_9.Payment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
